# mGBA_switch_cn

./: .gitignore  build.bat  build.sh  dockerbuild.sh  nxsend.sh
.devcontainer/: devcontainer.json
include/beiklive/: beiklive.h  bk_log.h  bk_theme.h
include/mgba-util/gui/: menu.h
src/core/: thread.c
src/feature/: CMakeLists.txt
src/feature/gui/: cheats.c  gui-beiklive.c  gui-beiklive.h  gui-config.c  gui-runner.c  gui-runner.h  remap.c
src/platform/3ds/: CMakeLists.txt  ctr-gpu.c  main.c
src/platform/opengl/: gles2.c
src/platform/qt/: AboutScreen_ui.py  ApplicationUpdatePrompt_ui.py  ArchiveInspector_ui.py  AssetTile_ui.py  BattleChipView_ui.py  CheatsView_ui.py  DebuggerConsole_ui.py  DolphinConnector_ui.py  FrameView_ui.py  GIFView_ui.py  IOViewer_ui.py  LoadSaveState_ui.py  LogView_ui.py  MapView_ui.py  MemoryDump_ui.py  MemorySearch_ui.py  MemoryView_ui.py  ObjView_ui.py  OverrideView_ui.py  PaletteView_ui.py  PlacementControl_ui.py  PrinterView_ui.py  ROMInfo_ui.py  ReportView_ui.py  SaveConverter_ui.py  SensorView_ui.py  SettingsView_ui.py  ShaderSelector_ui.py  ShortcutView_ui.py  TileView_ui.py  VideoView_ui.py  resources_rc.py
src/platform/qt/scripting/: ScriptingView_ui.py
src/platform/switch/: CMakeLists.txt  beiklive.c  beiklive_gl.c  beiklive_rewind.c  beiklive_shader.c  font-cn.h  gui-font.c  main.c  main.cpp
src/platform/switch old/: CMakeLists.txt  beiklive.c  beiklive_rewind.c  beiklive_shader.c  gui-font.c
src/platform/switch/include/: App.h  EglManager.h  OpenGLManager.h
src/platform/switch/include/core/: Readme.md  common.h  types.hpp  utils.h
src/platform/switch/include/spdlog/details/: os-inl.h
src/platform/switch/src/: App.cpp  EglManager.cpp  OpenGLManager.cpp  Utils.cpp
src/util/gui/: file-select.c  font-metrics.c  menu.c
